2005-10-22  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/nsmain.c (Ns_Main): initialize Tcl library in the
	server process only. Fix the broken SIGINT hadling which
	allowed us to CTRL-C the booting process at any time.
	Watchdog wakes up every 10 minutes on all platforms.

	* nsd/modload.c (Ns_ModuleLoad): make the passed file
	path absolute before attempting to load the module.

2005-10-21  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/tclcmds.c
	* nsd/tclfile.c: re-born ns_normalizepath as C command
	* tcl/compat.tcl: removed Tcl ns_normalizepath wrapper
	* configure.in: cosmetic change
	* include/Makefile.global.in: link against libnsd library
	when linking new nsdbstest driver
	* nsdbtest/Makefile: add MODNAME of nsdbtest so we can
	do more checks when linking the module
	* m4/tcl.m4: removed "-prebind" for Darwin builds
 
2005-10-21  Bernd Eidenschink  <eide@users.sf.net>

	* tests/images/: re-added files as binaries.
	* tests/ns_info.test: minor fix for test 2.27.1

2005-10-20  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/modload.c (Ns_ModuleLoad): Although the first two arguments
	to Ns_ModuleLoad are called server and module, they're really just
	two arbitrary strings passed to the module.  The nsdb module for
	examples passes the driver name and configuration path.  For this
	reason we cannot realy on knowing the current virtual server and
	so cannot allocate an interp from the per-thread cache.

	* include/ns.h:
	* nsd/tclobj.c: Generalise the ns_thread routines for wrapping a C
	structs with a Tcl obj handle.  Slighlty enhanced: also allows
	wrapping of statically allocated C structs which always have a direct
	string name -> struct relationship.
	* nsd/tclcmds.c:
	* nsd/tclthread.c: Convert to Tcl objects, remove some duplicated
	code and convert to the new ns:addr Tcl object type interface.
	* tests/ns_thread.test: Exercise the ns_thread command and the
	new ns:addr Tcl object type.
