@@ -146,6 +146,8 @@ AC_SUBST(NAVISERVER)
 #
 
 AC_CHECK_HEADERS(inttypes.h)
+AC_CHECK_TYPES(u_int32_t)
+AC_CHECK_TYPES(u_int8_t)
 AC_CHECK_FUNCS(timegm fork1 poll drand48 random _NSGetEnviron)
 AC_CHECK_HEADER(mach-o/dyld.h, AC_DEFINE(USE_DYLD, 1, [Define to 1 if the <mach-o/dyld.h> header should be used.]),)
 AC_CHECK_HEADER(dl.h, AC_DEFINE(USE_DLSHL, 1, [Define to 1 if the <dl.h> header should be used.]),)
